--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "tweet data analysis",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon -r esm app.js",
+    "start": "node -r esm app.js",
     "test": "jest"
   },
   "repository": {
@@ -20,5 +22,14 @@
   "bugs": {
     "url": "https://github.com/duo-upwork/tweet-data-analsis/issues"
   },
-  "homepage": "https://github.com/duo-upwork/tweet-data-analsis#readme"
+  "homepage": "https://github.com/duo-upwork/tweet-data-analsis#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "esm": "^3.2.25",
+    "express": "^4.18.2",
+    "twitter-api-v2": "^1.12.9"
+  }
 }
